--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.108.4",
+    "@react-three/fiber": "^8.16.8",
+    "autoprefixer": "^10.4.19",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-pdf": "^8.0.0"
+    "react-pdf": "^8.0.0",
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -22,8 +26,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "file-loader": "^6.2.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.5",
     "typescript": "^5",
     "url-loader": "^4.1.1",
     "webpack": "^5.91.0"
