--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.16.8",
     "autoprefixer": "^10.4.19",
     "framer-motion": "^11.1.7",
+    "gsap": "^3.12.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
